--- a/templates/email_app/index.html
+++ b/templates/email_app/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Templater - Django</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="{% static 'favicon.svg' %}">
+    <link rel="alternate icon" href="{% static 'favicon.ico' %}">
+    <link rel="mask-icon" href="{% static 'favicon.svg' %}" color="#3B82F6">
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- TinyMCE Rich Text Editor -->
     <script src="https://cdn.tiny.cloud/1/i7idxd1ss3d8d8dhyb63zcdozq8cgno2k9bymb5vrdaq8ynp/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
