--- a/templates/email_app/index.html
+++ b/templates/email_app/index.html
@@ -7,9 +7,9 @@
     <title>Email Templater - Django</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="{% static 'favicon.svg' %}">
-    <link rel="alternate icon" href="{% static 'favicon.ico' %}">
-    <link rel="mask-icon" href="{% static 'favicon.svg' %}" color="#3B82F6">
+    <link rel="icon" type="image/svg+xml" href="{% static 'favicon.svg' %}?v=20250811">
+    <link rel="alternate icon" href="{% static 'favicon.ico' %}?v=20250811">
+    <link rel="mask-icon" href="{% static 'favicon.svg' %}?v=20250811" color="#3B82F6">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- TinyMCE Rich Text Editor -->
