--- a/templates/email_monitor/upload_csv.html
+++ b/templates/email_monitor/upload_csv.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} - Email Monitor</title>
       <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="{% static 'favicon.svg' %}">
-    <link rel="alternate icon" href="{% static 'favicon.ico' %}">
-    <link rel="mask-icon" href="{% static 'favicon.svg' %}" color="#3B82F6">
+    <link rel="icon" type="image/svg+xml" href="{% static 'favicon.svg' %}?v=20250811">
+    <link rel="alternate icon" href="{% static 'favicon.ico' %}?v=20250811">
+    <link rel="mask-icon" href="{% static 'favicon.svg' %}?v=20250811" color="#3B82F6">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
