--- a/templates/email_app/index.html
+++ b/templates/email_app/index.html
@@ -11,7 +11,15 @@
     <link rel="alternate icon" href="{% static 'favicon.ico' %}?v=20250811">
     <link rel="mask-icon" href="{% static 'favicon.svg' %}?v=20250811" color="#3B82F6">
     
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+    <script>
+        // Disable Tailwind CDN production warning
+        tailwind.config = {
+            corePlugins: {
+                preflight: false,
+            }
+        }
+    </script>
     <!-- TinyMCE Rich Text Editor -->
     <script src="https://cdn.tiny.cloud/1/i7idxd1ss3d8d8dhyb63zcdozq8cgno2k9bymb5vrdaq8ynp/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 </head>
