--- a/templates/email_monitor/contacts_list.html
+++ b/templates/email_monitor/contacts_list.html
@@ -15,8 +15,8 @@
     <script>
         // Disable Tailwind CDN production warning
         tailwind.config = {
-            corePlugins: {
-                preflight: false,
+           theme: {
+                extend: {}
             }
         }
     </script>
